完成资源上传功能