@@ -1,33 +1,33 @@
 package org.dromara.web.controller;
 
-import cn.dev33.satoken.annotation.SaCheckPermission;
-import cn.hutool.core.util.ObjectUtil;
-import jakarta.servlet.http.HttpServletResponse;
-import jakarta.validation.constraints.NotEmpty;
-import lombok.RequiredArgsConstructor;
-import org.dromara.common.core.domain.R;
-import org.dromara.common.core.validate.QueryGroup;
-import org.dromara.common.log.annotation.Log;
-import org.dromara.common.log.enums.BusinessType;
-import org.dromara.common.mybatis.core.page.PageQuery;
-import org.dromara.common.mybatis.core.page.TableDataInfo;
-import org.dromara.common.web.core.BaseController;
-import org.dromara.edu.domain.bo.ImageBo;
-import org.dromara.edu.domain.vo.OssUploadVo;
-import org.dromara.edu.domain.vo.ImageVo;
-import org.dromara.edu.domain.vo.OssUploadVo;
-import org.dromara.edu.service.IImageService;
-import org.dromara.system.domain.bo.SysOssBo;
-import org.dromara.system.domain.vo.SysOssVo;
-import org.springframework.http.MediaType;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.multipart.MultipartFile;
-
-import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
+import lombok.RequiredArgsConstructor;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.validation.constraints.*;
+import cn.dev33.satoken.annotation.SaCheckPermission;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.validation.annotation.Validated;
+import org.dromara.common.idempotent.annotation.RepeatSubmit;
+import org.dromara.common.log.annotation.Log;
+import org.dromara.common.web.core.BaseController;
+import org.dromara.common.mybatis.core.page.PageQuery;
+import org.dromara.common.core.domain.R;
+import org.dromara.common.core.validate.AddGroup;
+import org.dromara.common.core.validate.EditGroup;
+import org.dromara.common.log.enums.BusinessType;
+import org.dromara.common.excel.utils.ExcelUtil;
+import org.dromara.edu.domain.vo.ImageVo;
+import org.dromara.edu.domain.bo.ImageBo;
+import org.dromara.edu.service.IImageService;
+import org.dromara.common.mybatis.core.page.TableDataInfo;
+
+/**
+ * 图片
+ *
+ * @author Pyx
+ * @date 2025-07-15
+ */
 @Validated
 @RequiredArgsConstructor
 @RestController
@@ -37,67 +37,69 @@ public class ImageController extends BaseController {
     private final IImageService imageService;
 
     /**
-     * 查询OSS对象存储列表
+     * 查询图片列表
      */
-    @SaCheckPermission("system:oss:list")
+    @SaCheckPermission("material:image:list")
     @GetMapping("/list")
-    public TableDataInfo<ImageVo> list(@Validated(QueryGroup.class) ImageBo bo, PageQuery pageQuery) {
+    public TableDataInfo<ImageVo> list(ImageBo bo, PageQuery pageQuery) {
         return imageService.queryPageList(bo, pageQuery);
     }
+
     /**
-     * 查询图片基于ID串
-     *
-     * @param imageIds 图片ID串
+     * 导出图片列表
      */
-    @SaCheckPermission("edu:image:query")
-    @GetMapping("/listByIds/{imageIds}")
-    public R<List<ImageVo>> listByIds(@NotEmpty(message = "主键不能为空")
-                                      @PathVariable Long[] imageIds) {
-        List<ImageVo> list = imageService.listByIds(Arrays.asList(imageIds));
-        return R.ok(list);
+    @SaCheckPermission("material:image:export")
+    @Log(title = "图片", businessType = BusinessType.EXPORT)
+    @PostMapping("/export")
+    public void export(ImageBo bo, HttpServletResponse response) {
+        List<ImageVo> list = imageService.queryList(bo);
+        ExcelUtil.exportExcel(list, "图片", ImageVo.class, response);
     }
 
     /**
-     * 上传图片
+     * 获取图片详细信息
      *
-     * @param file 图片文件
+     * @param id 主键
      */
-    @SaCheckPermission("edu:image:upload")
-    @Log(title = "图片上传", businessType = BusinessType.INSERT)
-    @PostMapping(value = "/upload", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
-    public R<OssUploadVo> upload(@RequestPart("file") MultipartFile file) {
-        if (ObjectUtil.isNull(file) || file.isEmpty()) {
-            return R.fail("上传图片不能为空");
-        }
-        ImageVo image = imageService.upload(file);
-        OssUploadVo uploadVo = new OssUploadVo();
-        uploadVo.setUrl(image.getUrl());
-        uploadVo.setFileName(image.getOriginalName());
-        uploadVo.setId(image.getImageId().toString());
-        return R.ok(uploadVo);
+    @SaCheckPermission("material:image:query")
+    @GetMapping("/{id}")
+    public R<ImageVo> getInfo(@NotNull(message = "主键不能为空")
+                                     @PathVariable Long id) {
+        return R.ok(imageService.queryById(id));
     }
 
     /**
-     * 下载图片
-     *
-     * @param imageId 图片ID
+     * 新增图片
      */
-    @SaCheckPermission("edu:image:download")
-    @GetMapping("/download/{imageId}")
-    public void download(@PathVariable Long imageId, HttpServletResponse response) throws IOException {
-        imageService.download(imageId, response);
+    @SaCheckPermission("material:image:add")
+    @Log(title = "图片", businessType = BusinessType.INSERT)
+    @RepeatSubmit()
+    @PostMapping()
+    public R<Void> add(@Validated(AddGroup.class) @RequestBody ImageBo bo) {
+        return toAjax(imageService.insertByBo(bo));
+    }
+
+    /**
+     * 修改图片
+     */
+    @SaCheckPermission("material:image:edit")
+    @Log(title = "图片", businessType = BusinessType.UPDATE)
+    @RepeatSubmit()
+    @PutMapping()
+    public R<Void> edit(@Validated(EditGroup.class) @RequestBody ImageBo bo) {
+        return toAjax(imageService.updateByBo(bo));
     }
 
     /**
      * 删除图片
      *
-     * @param imageIds 图片ID串
+     * @param ids 主键串
      */
-    @SaCheckPermission("edu:image:remove")
-    @Log(title = "图片删除", businessType = BusinessType.DELETE)
-    @DeleteMapping("/{imageIds}")
+    @SaCheckPermission("material:image:remove")
+    @Log(title = "图片", businessType = BusinessType.DELETE)
+    @DeleteMapping("/{ids}")
     public R<Void> remove(@NotEmpty(message = "主键不能为空")
-                          @PathVariable Long[] imageIds) {
-        return toAjax(imageService.deleteWithValidByIds(Arrays.asList(imageIds), true));
+                          @PathVariable Long[] ids) {
+        return toAjax(imageService.deleteWithValidByIds(List.of(ids), true));
     }
 }
